--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html>
-<head><link rel="stylesheet" href="https://unpkg.com/mono.css@latest/dist/mono.min.css"></head>
+<head><link rel="stylesheet" href="https://unpkg.com/mono.css@latest/dist/mono.min.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-36875111-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-36875111-2');
+</script>
+
+	</head>
 	<body>
 		<main class="content">
 			<section class="section">
 			    <div class="inner">
 		<h1>Analiza raportow WIG80 2007-2018</h1>
 		<p>Przeanalizowano 43 raportow</p>
-		<p>Raport <b>20.12.2001</b> nie zostal przeanalizowany poniewaz jest skanem</p> 
-		
 		    <h2>Raport 2007-03-16-sWIG80.xlsx</h2>
 			<h3>Spolki ktore weszly do indexu ():</h3>
 			<list></list>
